# xpsockets

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  a.out  http.hpp  main.cpp  nothing.txt  simple_http_server.cpp  strings.hpp  xpcommon.h  xpsockets.cpp  xpsockets.h  xpsockets.hpp  xpsockets.pro  xpsockets.pro.user.0438332  xpsockets.pro.user.08194d8  xpsockets.pro.user.43f4af2
include/: xpcommon.h
include/tests/: test_badly_behaved_client.h
src/: xpcommon.cpp
src/tests/: main.cpp  simple_http_server.cpp
tests/: test_badly_behaved_client.h
tests/build-chatterBoxServer-Desktop_Qt_5_15_2_MSVC2019_32bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release
tests/build-chatterBoxServer-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
tests/build-chatterBoxServer-Qt_6_2_0_for_macOS-Debug/: Makefile  chatterBoxServer
tests/chatterBoxServer/: chatterBoxServer.cpp  chatterBoxServer.pro
vs2019/tddxpsockets/: index.html  tddxpsockets.sln  tddxpsockets.vcxproj  tddxpsockets.vcxproj.filters
